objects/advpm__Timekeeper__c.object
<CustomObject>
    <customHelpPage>advpm__HelpTimekeeper</customHelpPage>
    <fields>
        <fullName>Last_Weeks_Quota_Hours__c</fullName>
        <description>Systematic field which is updated weekly and reflects the total number of hours logged by the timekeeper for the prior week.</description>
        <inlineHelpText>Systematic field which is updated weekly and reflects the total number of hours logged by the timekeeper for the prior week.</inlineHelpText>
        <label>Last Weeks Quota (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timekeepers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quota_Last_Updated__c</fullName>
        <description>The date of when the weekly quota value was last updated by the system.</description>
        <inlineHelpText>The date of when the weekly quota value was last updated by the system.</inlineHelpText>
        <label>Quota Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesforce_User_Alias__c</fullName>
        <formula>advpm__Staff__r.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce User Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Quota_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should this timekeeper be tracked against the weekly quota?  This is used for missing time notifications.</description>
        <inlineHelpText>Should this timekeeper be tracked against the weekly quota?  This is used for missing time notifications.</inlineHelpText>
        <label>Weekly Quota Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Alias__c</fullName>
        <label>Alias</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>advpm__External_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Timekeepers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Initials__c</fullName>
        <label>Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS - Associate</fullName>
                </value>
                <value>
                    <fullName>LA - Legal Assistant</fullName>
                </value>
                <value>
                    <fullName>OC - Of Counsel</fullName>
                </value>
                <value>
                    <fullName>OT - Other Timekeeper</fullName>
                </value>
                <value>
                    <fullName>PT - Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timekeepers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Use_Fiscal_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Fiscal Year</label>
        <type>Checkbox</type>
    </fields>
    <label>Timekeeper</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__External_Resource__c</columns>
        <columns>advpm__Staff__c</columns>
        <columns>advpm__Alias__c</columns>
        <columns>advpm__Initials__c</columns>
        <columns>advpm__Role__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Salesforce_User_Alias__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Timekeeper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timekeepers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>advpm__Staff_AND_External_Resource_Verify</fullName>
        <active>false</active>
        <description>Old Formula: AND( NOT( ISBLANK( advpm__Staff__c ) ), NOT( ISBLANK( advpm__External_Resource__c ) ) )</description>
        <errorConditionFormula>1=0</errorConditionFormula>
        <errorMessage>Both &apos;Staff&apos; and &apos;External Resource&apos; cannot be provided.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>advpm__Staff_OR_External_Resource_Is_Required</fullName>
        <active>false</active>
        <description>Old Formula: AND( ISBLANK( advpm__Staff__c ), ISBLANK( advpm__External_Resource__c ))</description>
        <errorConditionFormula>1=0</errorConditionFormula>
        <errorMessage>Either &apos;Staff&apos; or &apos;External Resource&apos; must be provided.</errorMessage>
    </validationRules>
</CustomObject>